fixed the alignment of every skills in skills page

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ html {
   
     background-image: url('assets/chadie-banner.jpg');
     background-size:cover;
-    background-attachment: fixed;
+    background-attachment:scroll;
     
   }
   
@@ -117,18 +117,6 @@ html {
     margin: 0 auto;
   }
 
-  .skills-section {
-    padding: 150px 24px;
-    margin: 0 auto;
-    display: flex;
-    align-items: baseline;
-    flex-direction:row;
-    max-width: 800px;
-    flex-wrap:wrap;
-    gap: 20px;
-   
-  }
-  
   .section h2 {
     margin-bottom: 42px;
   
@@ -142,9 +130,22 @@ html {
     font-weight: bold;
     color: #ED0049;
   }
+
+  .skills-section {
+    padding: 150px 24px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 960px;
+    gap: 20px 5px;
+
+
+  }
   
   .skills {
-    padding: 32px 0px 32px 0px;
+    padding: 32px 64px 32px 64px;
     margin-bottom: 32px;
     border-radius: 5px;
     background-color: #4b5563;
@@ -152,11 +153,13 @@ html {
     align-items: center;
     flex-direction:column;
     position: relative;
-    max-width: 100%;
+    max-width: 300px;
   }
   
   .skills-logo { 
-    max-height: 100%;
+    width: 128px;
+    height: 128px;
+    
   }
   
   
@@ -283,15 +286,15 @@ html {
     border-radius: 20px;
   }
 
+  .about-section {
+    margin-top: 240px;
+  }
+
   .about-section p:first-of-type {
     margin-top: 0;
   }
   
   .about-section p:last-of-type {
-    margin-bottom: 0;
-  }
-  
-  .skills:last-child {
     margin-bottom: 0;
   }
   
